mobify by heyongjun 2021-03-15 用户列表按条件分页查询提交

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,14 @@
             <version>12.1.0.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
