mobify by heyongjun 2021-03-16 添加用户信息

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.datasource.url=jdbc:oracle:thin:@192.168.16.37:1521:datalook
 spring.datasource.username=nvc
 spring.datasource.password=nvc
 spring.jpa.database=oracle
+
+pagehelper.helperDialect=oracle
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
